# AgentsMCP

./: .coverage.MacBook-Pro-2.local.15735.XeGKpUux  .coverage.MacBook-Pro-2.local.15756.XIRAYCfx  .coverage.MacBook-Pro-2.local.16027.XHNyFnXx  .coverage.MacBook-Pro-2.local.16039.XiotGxyx  .coverage.MacBook-Pro-2.local.16044.XnuGQVHx  .coverage.MacBook-Pro-2.local.16109.XpGLnyHx  .coverage.MacBook-Pro-2.local.82543.XCZVsnex  .coverage.MacBook-Pro-2.local.82547.XXwZutXx  .coverage.MacBook-Pro-2.local.82552.XuZugrox  .coverage.MacBook-Pro-2.local.82739.XfvcSsPx  .coverage.MacBook-Pro-2.local.82745.XtPUaEQx  .coverage.MacBook-Pro-2.local.82773.XItNCbTx  .coverage.MacBook-Pro-2.local.82781.XcjpeHMx  .env.example  .eslintrc.json  .gitignore  ADDITIONAL_PRODUCT_IMPROVEMENTS.md  AGENTIC_ENHANCEMENT_OVERVIEW.md  AGENTS.md  AGENTS_LOCAL.md  AGENT_ROLE_SYSTEM_IMPLEMENTATION.md  AGENT_SWARM_IMPROVEMENTS_IMPLEMENTATION.md  CLAUDE.md  CLI_README.md  COMPLETE_TUI_FIX_VALIDATION_REPORT.md  COMPREHENSIVE_AGENT_ROLES.md  COMPREHENSIVE_QA_ANALYSIS.md  CRITICAL_TUI_FIXES_SUMMARY.md  Dockerfile  END_TO_END_SELF_IMPROVEMENT_COMPLETE.md  END_TO_END_VERIFICATION_REPORT.md  ENHANCED_COMPREHENSIVE_QA_ANALYSIS.md  FINAL_TUI_VALIDATION_REPORT.md  GEMINI.md  IMMEDIATE_TUI_FIX.md  IMPLEMENTATION_TASKS.md  IMPROVEMENTS_TODO.md  INFINITE_LOOP_FIXES_SUMMARY.md  INFRASTRUCTURE.md  INPUT_CONTROLLER_INTEGRATION.md  (+333 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: automerge.yml  ci.yml  codeql-python.yml  codeql.yml  e2e.yml  python-ci.yml  release.yml  security.yml
.serena/: project.yml
.serena/memories/: execution_log_capture_infrastructure.md  memory_scaling_analysis.md  project_overview.md  self_improving_retrospective_system_requirements.md  suggested_commands.md  task_completion_workflow.md  tech_stack_and_conventions.md  tui_architecture_and_testing.md  tui_input_echo_fix_analysis.md
agents/: product_manager.md
benchmark_results/: enhanced_architecture_benchmark_20250825_015136.json  simplified_architecture_benchmark_20250825_015515.json
benchmarks/: enhanced_architecture_benchmark.py  enhanced_architecture_benchmark_simplified.py
charts/agentsmcp/: Chart.yaml  NOTES.txt  values-development.yaml  values-production.yaml  values-staging.yaml  values.yaml
docs/: AGENTIC_ARCHITECTURE.md  AGENTIC_FRAMEWORK_ANALYSIS.md  AGENT_COORDINATION.md  ARCHITECTURE_ANALYSIS_2025.md  BENCHMARKS.md  CI_MATRIX.md  CONTRIBUTING-DOCS.md  DEVELOPMENT_WORKFLOWS.md  IMPLEMENTATION_BACKLOG.md  LIVE_DASHBOARD.md  ORCHESTRATOR_MODELS.md  P6.2-config-design.md  P8-multi-agent-ci-pipeline.md  PRODUCT_BACKLOG.md  PROVIDERS.md  README.md  RECENT_CHANGES_ANALYSIS.md  SECURITY.md  SOFTWARE_DEVELOPMENT_QUICK_START.md  SUCCESS_METRICS_KPI.md  THINKING_SYSTEM_ARCHITECTURE.md  TOOL_INTEGRATION.md  TROUBLESHOOTING.md  TUI_ARCHITECTURE.md  TUI_PASTE_FIX.md  VERIFICATION_SYSTEM.md  accessibility-guidelines.md  agent-architecture-best-practices.md  ai-agent-best-practices.md  ai-agent-project-principles.md  architecture-analysis-synthesis.md  backlog.md  broa-agent-guidelines.md  changelog.md  cli-client.md  comprehensive-product-analysis-2025.md  configuration.md  coordination-log.md  decision-log.md  delegation.md  (+32 more)
docs/archive/: GUARDIAN_FIX_VERIFICATION_SUMMARY.md  README_V3_TUI_DEBUGGING.md  RICH_LIVE_DISPLAY_ARCHITECTURE_FIX.md  TUI_ACCEPTANCE_TEST_REPORT.md  TUI_DIAGNOSTIC_README.md  TUI_ECHO_FIX_REPORT.md  TUI_FIXES_COMPLETE_FINAL.md  TUI_FUNCTIONALITY_VERIFICATION_REPORT.md  TUI_INPUT_TYPING_FIX_VALIDATION_REPORT.md  TUI_INPUT_VISIBILITY_FINAL_REPORT.md  TUI_LAUNCHER_INIT_FIX.md  TUI_LAYOUT_CORRUPTION_FIX_REPORT.md  TUI_PROGRESSIVE_ENHANCEMENT_REPORT.md  TUI_USER_ACCEPTANCE_REPORT.md  (+3 more)
examples/: config-full.yaml  config-minimal.yaml  nlp_integration_example.py  ollama_turbo_example.py  orchestrator_model_demo.py  thinking_system_demo.py
golden_tests/: auth.validate_token.json
interfaces/: README.md  auth.validate_token.json
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  rbac.yaml  secret.yaml  service.yaml
scripts/: benchmark_startup.py  build_binary.sh  build_dist.sh  build_macos.sh  e2e_smoke.py  eslint.sh  orchestrator_monitor.py  pre_pr_check.sh  prettier.sh  test_nlp.py  test_orchestrator_communication.py  validate-infrastructure.sh  validate_orchestrator_config.py
spec/: cli_v3_architecture.json
static/: index.html
templates/: approval.html  simple_config.yaml
test_scenarios/: basic_functionality.py  llm_integration.py  rich_interface.py
tests/: DEVELOPMENT_WORKFLOW_TEST_SUMMARY.md  conftest.py  development_workflow_tests_README.md  run_development_workflow_tests.py  run_settings_tests.py  test_agent_manager.py  test_agents.py  test_agile_coach_role.py  test_cli.py  test_cli_args.py  test_comprehensive_software_development.py  test_config.py  test_context_helpers.py  test_dashboard.py  test_development_performance_scenarios.py  test_development_tool_integration.py  test_development_workflow_fixtures.py  test_discovery_registry.py  test_distributed_orchestrator.py  test_enhanced_preprocessing.py  test_envelope.py  test_interactive_commands.py  test_lazy_loading.py  test_mcp_api_gating.py  test_mcp_flags_and_status.py  test_mcp_tool_async.py  test_memory.py  test_modern_tui_layout_fix.py  test_monitoring_integration.py  test_multi_turn_tool_execution.py  test_multiturn_behavioral.py  test_multiturn_core.py  test_multiturn_integration.py  test_orchestration_agent_loader.py  test_orchestration_dynamic_orchestrator.py  test_orchestration_execution_engine.py  test_orchestration_resource_manager.py  test_placeholder.py  test_providers_validate.py  test_rag_pipeline.py  (+20 more)
(+740 files in other folders)
